# monarch-mapping-commons

./: .cruft.json  .env  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  boomer-style.json  custom.Makefile  docker-compose.yml  docker.Makefile  monarch_mapping_commons.Makefile  odk.bat  odk.sh  prefix_reconciliation.yaml  pyproject.toml  registry.yaml  registry.yml  run.sh  run_build.sh  update_registry.sh
.github/: pull_request_template.md
.github/workflows/: qc.yml  release.yml  test.yaml  test.yml  test_registry.yml
config/: Makefile.j2  README.md  commons.Makefile.j2  dummy.combined.sssom.tsv  dummy.metadata.yaml  dummy.prefix.yaml  metadata.yaml  project-cruft.json  project.Makefile.j2
data/output/: boomer_output.ofn  prefix.yaml  prefix_copy.yaml
mappings/: .README.md.swp  .loinc2chebi_1.sssom.tsv.swp  .loinc2chebi_2.sssom.tsv.swp  .loinc2cl.sssom.tsv.swp  .loinc2go.sssom.tsv.swp  .loinc2ncbitaxon.sssom.tsv.swp  .loinc2ncit.sssom.tsv.swp  README.md  biomappings.sssom.tsv  chebi-mesh.biomappings.sssom.tsv  empty.sssom.tsv  gene_mappings.tsv  hpo-snomed.sssom.tsv  loinc2chebi_1.sssom.tsv  loinc2chebi_2.sssom.tsv  loinc2cl.sssom.tsv  loinc2go.sssom.tsv  loinc2ncbitaxon.sssom.tsv  loinc2ncit.sssom.tsv  loinc2pr.sssom.tsv  loinc2uberon.sssom.tsv  mesh-chebi-biomappings.sssom.tsv  mondo_all.sssom.tsv  mondo_icd10cm_boomer.sssom.tsv  ncit-hp.sssom.tsv  upheno-lexical-custom.sssom.tsv  upheno-lexical-oak.sssom.tsv  upheno-logical-safe.sssom.tsv  upheno_custom_mapping_head_100.sssom.tsv
mappings/loinc-part-obo/: loinc2chebi_seb.sssom.tsv  loinc2chebi_seb.tsv  loinc2chebi_tim.tsv  loinc2cl.sssom.tsv  loinc2cl.tsv  loinc2go.sssom.tsv  loinc2go.tsv  loinc2ncbitaxon.tsv  loinc2ncit.tsv  (+5 more)
metadata/: gene_mappings.sssom.yml  mesh_chebi_biomappings.sssom.yml  upheno_custom_mapping.sssom.yml
projects/: mondo-all.symbiont.yaml  mondo-icd10cm.symbiont.yaml  mondo-omim-ordo-do.symbiont.yaml  mondo.symbiont.yaml
scripts/: add_conf_and_agg_sssom.py  add_confidence.py  gen_boomer_input.py  process_biomappings.py  registry_parser.py  update_registry.py
sparql/: equivalent_to_exactmatch.ru
tests/: test_registry.py
(+77 files in other folders)
