[tool.poetry]
name = "monarch-mapping-commons"
version = "0.1.0"
description = "A collection of all SSSOM-style mapping files used for the Monarch Initiative knowledge graph"
authors = ["glass-ships <glass.ships@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cruft = "^2.15.0"
pandas = "^2.1"
pytest = "^7.4.2"
sssom = "^0.4"
tsvalid = "^0.0.3"
phenio-toolkit = "^0.1.2"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
